<resources>
    <string name="app_name">courseline</string>
    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码（注册时不用输入此项）</string>
    <string name="action_sign_in">登录／注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱格式非法</string>
    <string name="error_invalid_password">密码至少6位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">该项不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">密码（必填）</string>
    <string name="pwd_confirm">确认密码（必填）</string>
    <string name="school">学校</string>
    <string name="grade">所在年级</string>
    <string name="nickname">昵称</string>
    <string name="regist">注册</string>
    <string name="error_password_confirm">确认密码不一致，请重新输入</string>
    <string name="title_activity_add_course">AddCourseActivity</string>
    <string name="subject">考试科目</string>
    <string name="begin_end">考试时间</string>
    <string name="end">考试地点</string>
    <string name="date">考试日期</string>
    <string name="auto_add_exam">自动导入考试</string>
    <string name="delete_exam">清空考试列表</string>
</resources>
