<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:id="@+id/exam_title"
        android:layout_height="30dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="@color/lightblue"
            android:text="@string/subject"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="@color/lightblue"
            android:text="@string/begin_end"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="@color/lightblue"
            android:text="@string/end"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="@color/lightblue"
            android:text="@string/date"/>

    </LinearLayout>

    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#000000" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mlistview">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/auto_add_exam"
            android:layout_marginLeft="145dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/auto_add_exam"
            android:textSize="15sp"
            android:background="#2edf0a"
            android:textStyle="bold"
            />

       <!-- <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/add_exam"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_exam"
            android:textSize="15sp"
            android:background="#2edf0a"
            android:textStyle="bold"
            />  -->

    </LinearLayout>



</LinearLayout>