<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@null">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">
    <TextView
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:id="@+id/subject"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"
        android:textColor="@color/lightblue"
        android:text="@string/subject"/>
    <TextView
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:id="@+id/exbegin"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"
        android:textColor="@color/lightblue"
        android:text="@string/begin"/>
    <TextView
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:id="@+id/exend"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"
        android:textColor="@color/lightblue"
        android:text="@string/end"/>
    <TextView
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:id="@+id/exdate"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"
        android:textColor="@color/lightblue"
        android:text="@string/date"/>
    </LinearLayout>
    <View
        android:layout_height="1px"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#000000" />
</LinearLayout>